# semantic_cache_and_RAG

./: .gitignore  README.md  pyproject.toml
docs/: ai.txt  india.txt  usa.txt
notebooks/: rag_demo_with_faiss.ipynb
src/: oollama.py  semantic_cache.py  test.py  vectorstore.py
tests/: test_semantic_cache.py  test_vectorstore.py
utils/: data_helper.py
